# contenttree-plugin-spec

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  schema-field-proposal.yml
.github/workflows/: validate.yml
docs/: protocol.md  security.md  state-machine.md  versioning.md
fixtures/: index.json
fixtures/manifest/invalid/: action-missing-action-id.json  deferred-completion-mode-without-supported-version.json  deferred-missing-operation-status-endpoint.json  extension-point-missing-action-id.json  extension-point-with-own-endpoints-rejected.json  extra-domain-field.json  missing-required-top-level.json  (+4 more)
fixtures/security/: hmac-vectors.json
openapi/: plugin-api.yaml  plugin-host-api.yaml
schemas/: manifest.schema.json
schemas/common/: fields.schema.json
schemas/v1/: invoke-request.schema.json  invoke-response.schema.json
schemas/v2/: browser-assertion-handoff-location.schema.json  callback-success-response.schema.json  completion-event.schema.json  interaction-assertion-claims.schema.json  interaction-assertion-exchange-request.schema.json  interaction-assertion-exchange-response.schema.json  invoke-accepted-response.schema.json  invoke-request.schema.json  operation-status.schema.json
tests/: conftest.py  test_fixtures_index.py  test_g1_whitelist_guard.py  test_hmac_vectors.py  test_no_network_no_product_repo.py  test_openapi_structure.py  test_schema_validity.py  test_state_machine_guard.py  test_transport_and_security_rules.py
(+97 files in other folders)
